--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,36 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Simple Website</h1>
+        <h1>Simple IT Troubleshoots</h1>
     </header>
     <main>
-        <p>This is a simple website with a dark gray background.</p>
+        <p>This is a simple website to troubleshoot simple issues.</p>
     </main>
+   <div class="sidebar-boxes">
+    <div class="sidebar-box" data-label="Google Chrome">
+        <img src="images/chrome.jpg" alt="Icon 1">
+        <span class="sidebar-label">Google Chrome</span>
+    </div>
+    <div class="sidebar-box" data-label="Java App">
+        <img src="images/java.png" alt="Icon 2">
+        <span class="sidebar-label">Java App</span>
+    </div>
+    <div class="sidebar-box" data-label="Microsoft Office">
+        <img src="images/office.png" alt="Icon 3">
+        <span class="sidebar-label">Microsoft Office</span>
+    </div>
+    <div class="sidebar-box" data-label="Windows">
+        <img src="images/windows.png" alt="Icon 4">
+        <span class="sidebar-label">Windows</span>
+    </div>
+</div>
+<div id="article-box" class="article-box" style="display:none;">
+    <h3 id="article-title"></h3>
+    <p>This will help</p>
+    <div id="article-content"></div>
+</div>
     <footer>
         <p>&copy; 2023 Simple Website</p>
     </footer>
     <script src="scripts/main.js"></script>
 </body>
-</html>
