--- a/src/index.html
+++ b/src/index.html
@@ -8,36 +8,47 @@
 </head>
 <body>
     <header>
-        <h1>Simple IT Troubleshoots</h1>
-    </header>
+    <h1>Simple IT Troubleshoots</h1>
+    <p>This is a simple website to troubleshoot simple issues.</p>
+</header>
+
+<div class="main-layout">
+    <div class="sidebar-boxes">
+    </div>
     <main>
-        <p>This is a simple website to troubleshoot simple issues.</p>
+Clicking an icon will show how to delete their relative cache or update the app.
     </main>
-   <div class="sidebar-boxes">
-    <div class="sidebar-box" data-label="Google Chrome">
-        <img src="images/chrome.jpg" alt="Icon 1">
-        <span class="sidebar-label">Google Chrome</span>
-    </div>
-    <div class="sidebar-box" data-label="Java App">
-        <img src="images/java.png" alt="Icon 2">
-        <span class="sidebar-label">Java App</span>
-    </div>
-    <div class="sidebar-box" data-label="Microsoft Office">
-        <img src="images/office.png" alt="Icon 3">
-        <span class="sidebar-label">Microsoft Office</span>
-    </div>
-    <div class="sidebar-box" data-label="Windows">
-        <img src="images/windows.png" alt="Icon 4">
-        <span class="sidebar-label">Windows</span>
-    </div>
 </div>
-<div id="article-box" class="article-box" style="display:none;">
-    <h3 id="article-title"></h3>
-    <p>This will help</p>
-    <div id="article-content"></div>
-</div>
+    <div class="main-layout">
+        <div class="sidebar-boxes">
+            <div class="sidebar-box" data-label="Google Chrome">
+                <img src="images/chrome.jpg" alt="Google Chrome">
+                <div class="sidebar-label">Google Chrome</div>
+            </div>
+            <div class="sidebar-box" data-label="Java App">
+                <img src="images/java.png" alt="Java App">
+                <div class="sidebar-label">Java App</div>
+            </div>
+            <div class="sidebar-box" data-label="Microsoft Office">
+                <img src="images/office.png" alt="Microsoft Office">
+                <div class="sidebar-label">Microsoft Office</div>
+            </div>
+            <div class="sidebar-box" data-label="Windows">
+                <img src="images/windows.png" alt="Windows">
+                <div class="sidebar-label">Windows</div>
+            </div>
+        </div>
+    </div>
+
+    <div id="article-box" class="article-box" style="display:none;">
+        <h3 id="article-title"></h3>
+        <div id="article-content">This will help</div>
+    </div>
+
     <footer>
         <p>&copy; 2023 Simple Website</p>
     </footer>
+
     <script src="scripts/main.js"></script>
 </body>
+</html>
