--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <div class="sidebar-boxes">
     </div>
     <main>
-Clicking an icon will show how to delete their relative cache or update the app.
+Clicking an icon will show how to delete their relative cache or update the app in windows on desktops and laptops.
     </main>
 </div>
     <div class="main-layout">
