--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-    <h1>Simple IT Troubleshoots</h1>
+    <h1>This Solves All Problems Ever</h1>
     <p>This is a simple website to troubleshoot simple issues.</p>
 </header>
 
@@ -46,7 +46,7 @@ Clicking an icon will show how to delete their relative cache or update the app 
     </div>
 
     <footer>
-        <p>&copy; 2023 Simple Website</p>
+        <p>&copy; 2025 Simple Website</p>
     </footer>
 
     <script src="scripts/main.js"></script>
