--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-    <h1>This Solves All Problems Ever</h1>
+    <h1>Simple Website</h1>
     <p>This is a simple website to troubleshoot simple issues.</p>
 </header>
 
