--- a/src/index.html
+++ b/src/index.html
@@ -46,6 +46,7 @@ Clicking an icon will show how to delete their relative cache or update the app 
     </div>
 
     <footer>
+        <p>You are recommended to reboot your device after following any of the steps.</p>
         <p>&copy; 2025 Simple Website</p>
     </footer>
 
