--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     <h1>Simple Website</h1>
-    <p>This is a simple website to troubleshoot simple issues.</p>
+    <h4>This is a simple website to troubleshoot simple issues.</h4>
 </header>
 
 <div class="main-layout">
