html asset fixed

--- a/src/index.html
+++ b/src/index.html
@@ -4,40 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Website</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="assets/styles/main.css">
 </head>
 <body>
     <header>
-    <h1>Simple Website</h1>
-    <h4>This is a simple website to troubleshoot simple issues.</h4>
-</header>
+        <h1>Simple Website</h1>
+        <p>This is a simple website to troubleshoot simple issues.</p>
+    </header>
 
-<div class="main-layout">
-    <div class="sidebar-boxes">
-    </div>
-    <main>
-Clicking an icon will show how to delete their relative cache or update the app in windows on desktops and laptops.
-    </main>
-</div>
     <div class="main-layout">
         <div class="sidebar-boxes">
             <div class="sidebar-box" data-label="Google Chrome">
-                <img src="images/chrome.jpg" alt="Google Chrome">
+                <img src="assets/images/chrome.jpg" alt="Google Chrome">
                 <div class="sidebar-label">Google Chrome</div>
             </div>
             <div class="sidebar-box" data-label="Java App">
-                <img src="images/java.png" alt="Java App">
+                <img src="assets/images/java.png" alt="Java App">
                 <div class="sidebar-label">Java App</div>
             </div>
             <div class="sidebar-box" data-label="Microsoft Office">
-                <img src="images/office.png" alt="Microsoft Office">
+                <img src="assets/images/office.png" alt="Microsoft Office">
                 <div class="sidebar-label">Microsoft Office</div>
             </div>
             <div class="sidebar-box" data-label="Windows">
-                <img src="images/windows.png" alt="Windows">
+                <img src="assets/images/windows.png" alt="Windows">
                 <div class="sidebar-label">Windows</div>
             </div>
         </div>
+        <main>
+            Clicking an icon will show how to delete their relative cache or update the app in windows on desktops and laptops.
+        </main>
     </div>
 
     <div id="article-box" class="article-box" style="display:none;">
@@ -50,6 +46,6 @@ Clicking an icon will show how to delete their relative cache or update the app 
         <p>&copy; 2025 Simple Website</p>
     </footer>
 
-    <script src="scripts/main.js"></script>
+    <script src="assets/scripts/main.js"></script>
 </body>
 </html>
