path fix public

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Website</title>
-    <link rel="stylesheet" href="assets/styles/main.css">
+    <link rel="stylesheet" href="src/assets/styles/main.css">
 </head>
 <body>
     <header>
@@ -15,19 +15,19 @@
     <div class="main-layout">
         <div class="sidebar-boxes">
             <div class="sidebar-box" data-label="Google Chrome">
-                <img src="assets/images/chrome.jpg" alt="Google Chrome">
+                <img src="src/assets/images/chrome.jpg" alt="Google Chrome">
                 <div class="sidebar-label">Google Chrome</div>
             </div>
             <div class="sidebar-box" data-label="Java App">
-                <img src="assets/images/java.png" alt="Java App">
+                <img src="src/assets/images/java.png" alt="Java App">
                 <div class="sidebar-label">Java App</div>
             </div>
             <div class="sidebar-box" data-label="Microsoft Office">
-                <img src="assets/images/office.png" alt="Microsoft Office">
+                <img src="src/assets/images/office.png" alt="Microsoft Office">
                 <div class="sidebar-label">Microsoft Office</div>
             </div>
             <div class="sidebar-box" data-label="Windows">
-                <img src="assets/images/windows.png" alt="Windows">
+                <img src="src/assets/images/windows.png" alt="Windows">
                 <div class="sidebar-label">Windows</div>
             </div>
         </div>
@@ -46,6 +46,6 @@
         <p>&copy; 2025 Simple Website</p>
     </footer>
 
-    <script src="assets/scripts/main.js"></script>
+    <script src="src/assets/scripts/main.js"></script>
 </body>
 </html>
